--- a/latn/css/latn.css
+++ b/latn/css/latn.css
@@ -34,7 +34,7 @@ h2 {
     font-weight: 500;
     margin-top: 20px;
     margin-bottom: 10px;
-    color: #1a237e; /* Primary color */
+    color: #911e95; /* Primary color */
 }
 
 p {
