--- a/latn/css/latn.css
+++ b/latn/css/latn.css
@@ -47,7 +47,7 @@ h2 {
   font-weight: 500;
   margin-top: 20px;
   margin-bottom: 10px;
-  color: #f700ff;
+  color: #1a237e;
   /* Primary color */
 }
 
